排班页面的el-row中margin-top问题解决

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -104,7 +104,8 @@ body > .el-container {
       .el-row{
         display: flex;
         flex-wrap: wrap;
-        align-items: center;
+				align-items: center;
+				margin-top: 10px;
         .el-input{
           width:auto;
         }
