--- a/Page/scss/pages/_statistics.scss
+++ b/Page/scss/pages/_statistics.scss
@@ -58,66 +58,66 @@
                 }
             }
         }
-        thead>.cell {
-            background-color: #666;
-            height: 30px;
-            line-height: 30px;
-            color: #fff;
-    }
-    .is-leaf {
-            background: #666;
-            color: #fff;
-            height: 28px;
-            line-height: 28px;
-            padding: 2px 0;
-            text-align: center;
-    } 
-    tr {
-            height: 28px;
-            line-height: 28px;
-            padding: 2px;
-            text-align: center;
-            border: 1px solid transparent;
-    }
-    .el-tag--vl-people {
-            width:48px;
-            // height:20px;
-            color: #fff;
-            background-color:#ff8500; 
-    }
-    .el-tag--vl-car {
-            width:48px;
-            // height:20px;
-            color: #fff;
-            background-color:#0096ff; 
-    }
-    .el-tag--vl-company {
-            width:48px;
-            // height:20px;
-            color: #fff;
-            background-color:#a346bc; 
-    }
-    .el-tag--vl-tool {
-            width:48px;
-            // height:20px;
-            color: #fff;
-            background-color:#677f95; 
-    }
-    .el-table--enable-row-hover .el-table__body tr>td {
-            padding: 6px 0;
-            border-top: 1px solid transparent;
-            border-bottom: 1px solid transparent;
-            text-align: center;
-    }
-    .el-table--enable-row-hover .el-table__body tr:hover>td {
-            background-color: #e3f3fc !important;
-            border-top: 1px solid #0096ff;
-            border-bottom: 1px solid #0096ff;
-    }
-    .el-table .cell {
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-    }
-    }
+    //     thead>.cell {
+    //         background-color: #666;
+    //         height: 30px;
+    //         line-height: 30px;
+    //         color: #fff;
+    // }
+    // .is-leaf {
+    //         background: #666;
+    //         color: #fff;
+    //         height: 28px;
+    //         line-height: 28px;
+    //         padding: 2px 0;
+    //         text-align: center;
+    // } 
+    // tr {
+    //         height: 28px;
+    //         line-height: 28px;
+    //         padding: 2px;
+    //         text-align: center;
+    //         border: 1px solid transparent;
+    // }
+    // .el-tag--vl-people {
+    //         width:48px;
+    //         // height:20px;
+    //         color: #fff;
+    //         background-color:#ff8500; 
+    // }
+    // .el-tag--vl-car {
+    //         width:48px;
+    //         // height:20px;
+    //         color: #fff;
+    //         background-color:#0096ff; 
+    // }
+    // .el-tag--vl-company {
+    //         width:48px;
+    //         // height:20px;
+    //         color: #fff;
+    //         background-color:#a346bc; 
+    // }
+    // .el-tag--vl-tool {
+    //         width:48px;
+    //         // height:20px;
+    //         color: #fff;
+    //         background-color:#677f95; 
+    // }
+    // .el-table--enable-row-hover .el-table__body tr>td {
+    //         padding: 6px 0;
+    //         border-top: 1px solid transparent;
+    //         border-bottom: 1px solid transparent;
+    //         text-align: center;
+    // }
+    // .el-table--enable-row-hover .el-table__body tr:hover>td {
+    //         background-color: #e3f3fc !important;
+    //         border-top: 1px solid #0096ff;
+    //         border-bottom: 1px solid #0096ff;
+    // }
+    // .el-table .cell {
+    //         overflow: hidden;
+    //         white-space: nowrap;
+    //         text-overflow: ellipsis;
+    // }
+  }
 }
