违规记录卡片样式修改

--- a/Page/scss/_variables.scss
+++ b/Page/scss/_variables.scss
@@ -75,6 +75,7 @@ $color-person:#505261;
 
 $--card-padding: 5px;
 // $--table-current-row-background: red;
+$--table-current-row-background: #f0f2f4;
 
 
 $color-bg-blue:	#1d60dd;
