--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -14,7 +14,10 @@
     }
     .violation-card {
         .el-card {
-            height: 239px;
+            height: 220px;
+            .el-card__body {
+                padding: 8px;
+            }
         }
         .violation-id {
             font-size: 18px;
@@ -39,6 +42,22 @@
             }
             .tag-company {
                 background: #588fe5;
+            }
+            .yellow {
+                color:#FF8A04;
+                font-size: 16px;
+            }
+            .car-blue {
+                color: #289DFF;
+                font-size: 16px;
+            }
+            .equip-gray {
+                color:#6B8093;
+                font-size: 16px;
+            }
+            .company-purple {
+                color: #9759B7;
+                font-size: 16px;
             }
         }
         .company {
@@ -66,7 +85,7 @@
 
             }
             .picture {
-                height: 70px;
+                height: 3.375rem;
                 width: 80px;
                 border: 1px solid #ccc;
                 background-color: #ccc;
@@ -204,26 +223,10 @@
             padding: 2px;
             text-align: center;
             border: 1px solid transparent;
-            // :hover {
-            //     border: 1px solid #0096ff !important;
-            //     background: #e3f3fc !important;
-            // }
         }
-        // &>table {
-        //     tbody {
-        //         .el-table__row {
-        //             height: 28px;
-        //             line-height: 28px;
-        //             padding: 2px;
-        //             text-align: center;
-        //             border: 1px solid transparent;
-        //             :hover {
-        //                 border: 1px solid #0096ff !important;
-        //                 background: #e3f3fc !important;
-        //             }
-        //         } 
-        //     }
-        // }
+        .el-table--striped .el-table__body tr.el-table__row--striped td {
+            background: #f0f2f4;
+        }
         .el-tag--vl-people {
             width:48px;
             // height:20px;
@@ -248,24 +251,6 @@
             color: #fff;
             background-color:#677f95; 
         }
-        // td {
-        //     padding: 6px 0 !important;
-        //     text-align: center;
-        //     :hover {
-        //         border-top: 1px solid #0096ff !important;
-        //         border-bottom: 1px solid #0096ff !important;
-        //         background: #e3f3fc !important;
-        //     }
-        //     // border: 1px solid transparent;
-        // }
-        // tr {
-        //     border: 1px solid transparent !important;
-        // }
-        // .el-table__body tr>td:hover{
-        //     // background-color: $--table-row-hover-background;
-        //     background: #e3f3fc;
-        //     border: 1px solid #184bff !important;
-        //   }
         .el-table--enable-row-hover .el-table__body tr>td {
             padding: 6px 0;
             border-top: 1px solid transparent;
