--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -454,5 +454,47 @@ body > .el-container {
         }
       }
     }
-  }
+	}
+.taskhandover {
+	width:467px;
+	height:270px;
+	background: #f7fcff;
+	border: 1px solid #0064FF;
+	margin: auto;
+	overflow-y: scroll;
+	padding: 10px;
+	div {
+		margin: auto;
+		text-align: center;
+	}
+	span {
+		display: inline-block;
+		height: 20px;
+		line-height: 20px;
+		min-width: 42px;
+		text-align: center;
+		margin:5px 0;
+	}
+	.flight-no {
+		background: #393f44;
+		color: #fff;
+		font-size: 16px;
+		padding: 0 5px;
+		line-height: 20px;
+		border-radius: 4px;
+	}
+	.flight-id {
+		color: #0064FF;
+		font-size: 16px;
+	}
+	.time {
+		color: #666;
+		font-size: 14px;
+	}
+	.staff-name {
+		color: #0064FF;
+	}
+}	
 }
+
+
