home中的table奇偶行样式添加

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -301,6 +301,9 @@ body > .el-container {
 						color: #fff;
 						background-color:#677f95; 
 				}
+				.el-table--striped .el-table__body tr.el-table__row--striped td {
+					background: #f0f2f4;
+				}
 				.el-table--enable-row-hover .el-table__body tr>td {
 						padding: 6px 0;
 						border-top: 1px solid transparent;
