--- a/Page/scss/smartScheduling.scss
+++ b/Page/scss/smartScheduling.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "common.scss";
 @import "../../public/iconfont/iconfont.css";
+@import "font";
 
 @import "pages/nav";
 @import "pages/home";
