标记颜色添加

--- a/Page/scss/smartScheduling.scss
+++ b/Page/scss/smartScheduling.scss
@@ -13,3 +13,21 @@
 @import "pages/rollCall";
 @import "pages/urgentReport";
 @import "pages/login";
+
+
+.icon-shiji2 {
+    color: #184bff;
+}
+.icon-yuji2 {
+    color:#ff5800;
+}
+.icon-hangxian {
+    color:#294fa3;
+}
+.icon-pianlishangbao1{
+    color:#1d3a7f;
+}
+
+.icon-yanwubiaoji {
+    color: red;
+}
