--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -65,6 +65,7 @@ body > .el-container {
 			line-height:45px;
 			border-bottom:1px dashed #979797;
 			margin-bottom:10px;
+			overflow:hidden;
 			.flightNo{
 				background-color:#393f43;
 				color:#fff;
