--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -112,29 +112,16 @@
 	.outermostsection{
 		width:100%;
 	}
-	.el-radio-button:first-child .el-radio-button__inner{
-		padding:3px;
-		margin-left:30px;
-		border-radius:30px;
-		width:90px;
-		font-size:12px;
-	}
-	.el-radio-button:last-child .el-radio-button__inner{
-		padding:3px;
-		margin-left:30px;
-		border-radius:30px;
-		width:90px;
-		font-size:12px;
-	}
 	.outermostheader{
 		margin:10px 0px;
-	}
-	.el-radio-button is-active{
-		outline:#fff auto 0 !important;
 	}
 	.input1{
 		font-size:12px;
 		height:34px;
 		line-height:16px;
+	}
+	.img{
+		width:100%;
+		height:100%;
 	}
 }
