--- a/Page/scss/pages/_sheet.scss
+++ b/Page/scss/pages/_sheet.scss
@@ -1,5 +1,10 @@
 .sheet-container {
     width: 100%;
+    padding: .3125rem;
+    font-size: .875rem;
+    height: 100vh;
+    overflow-y: scroll;
+    background: #e4e7ec;
     .sheet {
         .el-row {
             width: 100%;
@@ -14,7 +19,7 @@
             margin: 0 10px;
         }
         .el-date-editor, .el-input {
-            width: 140px;
+            width: 15.75rem;
             height: 30px;
             line-height: 30px;
             .el-input__inner{
@@ -28,6 +33,9 @@
             .el-input__icon {
                 height: 30px;
                 line-height: 30px;
+            }
+            .el-range-separator {
+                line-height: 24px !important;
             }
         } 
         .right-col {
@@ -65,6 +73,30 @@
             line-height: 28px;
             padding: 2px;
             text-align: center;
+        }
+        .el-table--striped .el-table__body tr.el-table__row--striped td {
+            background: #f0f2f4;
+        }
+        .el-table--enable-row-hover .el-table__body tr>td {
+            padding: 6px 0;
+            border-top: 1px solid transparent;
+            border-bottom: 1px solid transparent;
+            text-align: center;
+        }
+        .el-table--enable-row-hover .el-table__body tr:hover>td {
+            background-color: #e3f3fc !important;
+            border-top: 1px solid #0096ff;
+            border-bottom: 1px solid #0096ff;
+        }
+        .el-table .cell {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+        .el-table_1_column_1  {
+            font-family: $font-family-One;
+            color: #000;
+            font-weight: 700;
         }
     }  
 }
