--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -1,8 +1,9 @@
 .outermostsection{
 	flex:1;
+	background-color:#E4E7EC;
 	.urgentReport{
 		flex:1;
-		padding:10px 25px;
+		padding:0px 25px 10px;
 		background-color:#e4e4e4;
 		overflow:scroll;
 		.Row1{
@@ -113,7 +114,7 @@
 		width:100%;
 	}
 	.outermostheader{
-		margin:10px 0px;
+		margin:8px 0px;
 	}
 	.input1{
 		font-size:12px;
@@ -123,5 +124,62 @@
 	.img{
 		width:100%;
 		height:100%;
+	}
+	.deptBtn{
+		font-size:12px;	
+		height:20px;
+		padding:0px;
+		width:80px;
+	}
+	.datePicker{
+		width:260px;
+		height:34px;
+		padding:0px 10px;
+		border:0px;
+		align-items:baseline;
+	}
+   .input{
+		width:100%;
+		height:100%;
+		.el-input__inner{
+			width:100%;
+			height:100%;
+		}
+	}
+	.inputRow{
+		width:220px;
+		height:34px;
+		padding:0;
+		position:absolute;
+		right:25px;
+	}
+	.el-row{
+		position:relative;
+		height:34px;
+		margin:0;
+	}
+	.dateRow{
+		padding:0;
+		position:absolute;
+		right:225px;
+		.el-input__inner{
+			width:100%;
+			height:100%;
+			padding-right:0;
+		}
+	}
+	.deptRow{
+		position:relative;
+		.deptBtn1{
+			position:absolute;
+			left:55px;
+		}
+		.deptBtn2{
+			position:absolute;
+			left:145px;
+		}
+	}
+	.el-range-input,.el-range-separator,.el-range-input,.inputRow .el-input__inner{
+		font-size:12px;
 	}
 }
