--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -202,14 +202,25 @@ body > .el-container {
 		}
 		.toggleBtn {
 			position:absolute;
-			top:60px;
+			top:45%;
 			right:-20px;
-			width: 20px;
-			height:40px;
-			line-height:40px;
+			width:15px;
+			height:120px;
+			line-height:100px;
 			background: #666;
 			color:#fff;
 			font-size:18px;
+			border-top: 8px solid #f1f1f1;
+			border-left: 15px solid #1b65ff;
+			border-bottom: 8px solid #f1f1f1;
+			border-top-right-radius:20px;
+			border-bottom-right-radius:20px;
+			i{
+				position:absolute;
+				left:-15px;
+				color:white;
+				font-size:14px;
+			}
 		}
 	}
 	.el-main {
@@ -217,7 +228,7 @@ body > .el-container {
 		text-align: center;
 	}
 	.el-container{
-		background-color: #f1f1f1;
+		background-color: #fff;
 		.home-mian-header{
 			height:60px;
 			line-height:60px;
@@ -424,7 +435,7 @@ body > .el-container {
 						.el-col {
 							margin-top:10px;
 							.el-card {
-								border:1px dashed #c7c7c7;
+								//border:1px dashed #c7c7c7;
 								cursor:pointer;
 								.el-card__body{
 									padding:0;
@@ -447,14 +458,30 @@ body > .el-container {
 								}
 								.el-aside{
 									background-color:white;
-									padding-left:20px;
-									padding-bottom:10px;
+									padding-left:10px;
+									//padding-bottom:10px;
 									text-align: left;
 									font-size:14px;
 									color:#9a9a9a;
 									font-weight:bold;
 									.first-row{
 										color:#4e66ef;
+									}
+									.t-white{
+										color: #fff;
+										padding: 0 .25rem;
+										border-radius: .125rem;
+									}
+									.b-black{
+										background-color: #393f43;
+									}
+									.b-blue{
+										background-color: #0076ee;
+									}
+									.legend{
+										padding:0;
+										height:20px;
+										line-height:20px;
 									}
 									.second-row{
 										.flightNo{
