首页背景色

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -228,7 +228,7 @@ body > .el-container {
 		text-align: center;
 	}
 	.el-container{
-		background-color: #fff;
+		background-color: #f1f1f1;
 		.home-mian-header{
 			height:60px;
 			line-height:60px;
@@ -264,7 +264,6 @@ body > .el-container {
 				display: flex;
 				flex-wrap: wrap;
 				align-items: center;
-				margin-top: 10px;
 				.el-input{
 					width:auto;
 				}
