输入时间段后端没返回数据

--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -202,5 +202,15 @@
 		.dateRow{
 			right:200px;
 		}
+		.dateRow{
+			padding-right:0px;
+			width:300px;
+			.el-input__inner{
+				width:260px;
+			}
+			.el-range-input{
+				width:100%;
+			}
+		}
 	}
 }
