--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -163,8 +163,8 @@
     }
     .dialog {
         .el-dialog__header {
-            background-color: #eff5fd;
-            display: none;
+            // background-color: #eff5fd;
+            // display: none;
             .el-dialog__title {
                 color: #00a3db;
                 font-size: 14px;
