--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -2,12 +2,12 @@
 	flex:1;
 	background-color:#E4E7EC;
 	overflow-x:hidden;
-	overflow-y:scroll;
+	overflow-y:auto;
 	.urgentReport{
 		flex:1;
 		padding:0px 25px 10px;
 		background-color:#E4E7EC;
-		overflow:scroll;
+		overflow:auto;
 		.Row1{
 			display:flex;
 			flex-direction:row;
