首页任务优化

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -286,6 +286,7 @@
 				border-radius:4px;
 				text-align: right;
 				margin-top:0;
+				margin-left:0 !important;
 				justify-content: flex-start;
 				background-color: #fff;	
 				height:30px;
@@ -506,6 +507,7 @@
 									font-weight:bold;
 									.first-row{
 										color:black;
+										height:30px;
 									}
 									.t-white{
 										color: #fff;
