违规记录的历史只展示不通过和通过的数据，导出的修改完善

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -4,6 +4,9 @@
     font-size:14px;
     height: 100vh;
     background: #E4E7EC;
+    .violation-topbar {
+        // background-color: #fff;
+    }
     .tab-button {
         margin-bottom: 10px;
     }
