bug SCHD-11 SCHD-10解决，即分页每页条数的布局问题以及计划时间未显示完全问题

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -2,6 +2,7 @@
 @import "../components/messageBtn";
 @import "../components/UrgentReportBtn";
 @import "../components/elDialog";
+@import "../components/pageNation";
 #app > .el-container {
 	overflow:hidden;
 }
